Mon Sep 15 15:22:06 2003  George Lebl <jirka@5z.com>

	* src/mini-commander_applet.c: when started in lockdown mode, hide
	  the preferences item.  When
	  /desktop/gnome/lockdown/inhibit_command_line is true, then make
	  self insensitive since command line is very prohibited here.

Mon Sep 15 14:23:48 2003  George Lebl <jirka@5z.com>

	* src/command_line.c: remove unused var to avoid compiler
	  warning

2003-08-24  Kevin Vandersloot

	* src/mini-commander.glade: Fix numeric spin button. Patch from  Shakti Sen.
	Fixes bug #120472

Tue Aug 12 16:49:27 2003  George Lebl <jirka@5z.com>

	* src/preferences.c: Fix for #119734, updating the
	  autocomplete_history key using the correct key

2003-07-24  Kevin Vandersloot

	* schemas.in: Clean up strings as part of bug #116066

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* src/mini-commander.glade:  HIGify widget padding between the 
	vbox and action area of the dialogs.  Thanks to <chris@gnome-de.org> 
	Christian - Manny Calavera - Neumair.
	
Wed Jul 09 14:50:26 2003  George Lebl <jirka@5z.com>

	* src/properties.[ch], src/history.c, src/mini-commander.glade: respect
	  key writability

2003-06-16  Kevin Vandersloot

	* src/mini-commander_applet.c: add keybindings for history and browser

2003-06-14  Kevin Vandersloot

	* src/mini-commander_applet.c, command line.c: expand for Fitts' law including the entry.

2003-06-14  Narayana Pattipati <narayana.pattipati@wipro.com>

	* src/mini-commander_applet.c: Fix the problem of "Command text
	entered in mini commander is not retained if user changes some
	preferences of the applet". Bugzilla bug#103803

2003-05-31  Abel Cheung  <maddog@linux.org.hk>

	* src/about.c: Don't free pixbuf file name before it is really unused.

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* src/mini-commander.glade:  HIGify the action area of the 
	preferences and add macro dialogs.
	
2003-04-30  Irene Ryan <irene.ryan@sun.com>
	