@@ -1,3 +1,10 @@
+Tue Sep 16 17:05:35 2003  George Lebl <jirka@5z.com>
+
+	* src/mini-commander_applet.c: when the command line is disabled,
+	  then display a dialog telling the user so and exit.  This way
+	  the applet can actually be removed (by not reloading it) if the
+	  user accidentally adds it but has command line inhibited.
+
 Mon Sep 15 15:22:06 2003  George Lebl <jirka@5z.com>
 
 	* src/mini-commander_applet.c: when started in lockdown mode, hide
